--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+.vs_code/*
 # C extensions
 *.so
 
@@ -121,3 +121,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.DS_Store
+.vscode/settings.json
+bottle.py
